# mail-transfer

./: .dockerignore  .env  .env.encrypted  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  entrypoint.sh  mail-transfer.code-workspace  main.py  pyproject.toml  settings.py
.claude/: settings.json
.claude/rules/: CLAUDE.md
.cursor/rules/: backend.mdc
.github/workflows/: mail-transfer.yml
application/: mail_transfer_service.py
domain/: ports.py
infrastructure/: gmail.py  notion.py
infrastructure/gmail/: gmail.py  provider.py
infrastructure/notion/: notion.py  provider.py
src/: logger.py  main.py  settings.py
src/application/: mail_transfer_service.py
src/domain/: interfaces.py  ports.py
src/domain/models/: mail.py
src/infrastructure/gmail/: gmail.py  provider.py
src/infrastructure/notion/: notion.py  provider.py
src/usecase/: mail_transfer_service.py
tests/domain/models/: test_mail.py
tests/infrastructure/gmail/: test_gmail.py
tests/infrastructure/notion/: test_notion.py
tests/usecase/: test_mail_transfer_service.py
