[tool.poetry]
name = "mail-transfer"
version = "0.1.0"
description = ""
authors = ["Ryo0333 <windsguitar@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
ruff = "^0.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
