[project]
name = "mail-transfer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "httpx>=0.28.1",
    "injector>=0.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]

[tool.ruff]
exclude = [
  '^\.git/',
  '^\.mypy_cache/',
  '^\.venv',
  '^\.ruff_cache/',
]
line-length = 119

[tool.mypy]
exclude = [
  '^\.git/',
  '^\.mypy_cache/',
  '^\.venv',
  '^\.ruff_cache/',
]
